# gfa_reduce

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
doc/: api.rst  changes.rst  conf.py  daily_summary_imports.rst  daily_summary_imports.yml  index.rst
doc/nb/: GFA_NaN_Summary.ipynb  kpno_nersc_gfa.ipynb
etc/: dl_compare_daily_summary_files_relative_transparency.pro  gfa_reduce.module
py/gfa_reduce/: __init__.py  _version.py  common.py  cube_proc.py  dark_current.py  exposure.py  gfa_red.py  gfa_wcs.py  image.py  io.py
py/gfa_reduce/analysis/: __init__.py  amm_2dhist.py  asterisms.py  basic_catalog_stats.py  basic_image_stats.py  center_contrast.py  djs_maskinterp.py  djs_photcen.py  dm.py  gaussian.py  phot.py  radprof.py  recalib_astrom.py  segment.py  sky.py  splinefwhm.py  util.py
py/gfa_reduce/attic/: __init__.py  gfa_realtime.py  nightly_gfa_redux.py  pointing_offsets.py  run_concat_ccds.py  run_concat_ccds_nersc.py
py/gfa_reduce/imred/: __init__.py  dq_mask.py  load_calibs.py
py/gfa_reduce/scripts/: __init__.py  concat_ccds.py  daily_summary.py  gfa_single_night.py  guide_commands.py
py/gfa_reduce/test/: __init__.py  test_analysis.py  test_common.py  test_cube_proc.py  test_dark_current.py  test_exposure.py  test_gfa_red.py  test_gfa_wcs.py  test_image.py  test_imred_dq_mask.py  test_imred_load_calibs.py  test_io.py  test_scripts_concat_ccds.py  test_scripts_daily_summary.py  test_scripts_gfa_single_night.py  test_top_level.py  test_xmatch_gaia.py
py/gfa_reduce/xmatch/: __init__.py  gaia.py
py/scripts/: coadd_commands.py  concat_ccds.py  concat_matched_coadd_ccds.py  gfa_realtime.py  gfa_recent_nights.py  gfa_single_night.py  nightly_commands.py  nightly_gfa_redux.py  pointing_offsets.py  run_concat_ccds.py  run_concat_ccds_nersc.py
